[package]
name = "yeet-signal-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
rand = "*"
pico-args = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.17"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }